# line_detector

./: .gitignore  CMakeLists.txt  Detector.pro  README.md  angledeterminer1.cpp  angledeterminer1.h  imagegenerator.cpp  imagegenerator.h  imageprocessor.cpp  imageprocessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
